--- a/rulesofgame.css
+++ b/rulesofgame.css
@@ -7,7 +7,7 @@
 				font-size: 40px;
 				border: none;
 				outline: none;
-				background-color: orangered;
+				background-color: #49e819;
 				color: white;
 				cursor: pointer;
 				padding: 15px;
