--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@
 			font-size: 40px;
 			border: none;
 			outline: none;
-			background-color: orangered;
+			background-color: #49e819;
 			color: white;
 			cursor: pointer;
 			padding: 15px;
@@ -84,3 +84,33 @@
 			color: #32e0c4;
 			font-weight: light;	
 		}
+
+		.button {
+			display: inline-block;
+			padding: 10px 25px;
+			text-align: center;
+			text-decoration: none;
+			color: whitesmoke;
+			background-color:#da1f1f;
+			border-radius: 6px;
+			outline: none;
+			font-size: 30px;
+			text-transform: uppercase;
+		  }
+		  @keyframes glowing {
+			0% {
+			  background-color: darkred;
+			  box-shadow: 0 0 5px darkred;
+			}
+			50% {
+			  background-color: red;
+			  box-shadow: 0 0 20px red;
+			}
+			100% {
+			  background-color: darkred;
+			  box-shadow: 0 0 5px darkred;
+			}
+		  }
+		  .button {
+			animation: glowing 1300ms infinite;
+		  }
